--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dawn"]
-	path = dawn
-	url = git@github.com:google/dawn.git
+[submodule "WebGPU-distribution"]
+	path = WebGPU-distribution
+	url = https://github.com/eliemichel/WebGPU-distribution
