--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,15 @@ cmake_minimum_required(VERSION 3.23...3.24 FATAL_ERROR)
 project(webgpu-backend-dawn VERSION 1.0.0)
 
 #
+# Set up C++ environment
+#
+set(CMAKE_C_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED YES)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+#
 # Include Dawn
 #
 set(DAWN_BUILD_ANDROID_SAMPLES OFF)
